fix @tomasruizt broken css

--- a/src/components/matching/Match.scss
+++ b/src/components/matching/Match.scss
@@ -18,8 +18,12 @@
   }
 
   .icon {
-    width: 30px;
-    height: 30px;
+    margin-left: 10px;
+
+    width: 20px;
+    height: 20px;
+
+    cursor: pointer;
   }
 
   .name {
